--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p {position:absolute;top:45%;width:100%;padding-top:20px;text-align:center;color
 <script>
   window.WebGLRenderingContext = null;
 </script>
-<script src='http://tinyjs.net/libs/tiny.full.debug.js'></script>
+<script src='http://tinyjs.net/libs/tiny.debug.js'></script>
 <script src='./dist/game.js'></script>
 <script>
     //Dom和游戏的Bridge
